[package]
name = "lc"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A CLI tool that removes tracking parameters and junk from URLs."
repository = "https://github.com/sharmadanshu/extra-src/cleaner"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
arboard = "3.4"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
