[package]
name = "lc"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"
description = "A CLI tool that removes tracking parameters and junk from URLs."
repository = "https://github.com/dotzenith/cleaner"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
url = "2.5"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
dirs = "6.0"
arboard = "3.6"
anyhow = "1.0"
