[package]
name = "healer"
version = "1.2.0"
edition = "2024"
license = "GPL-3.0"
homepage = "https://github.com/dotzenith/healer"
description = "Heal (clean) ugly urls from the commandline"
repository = "https://github.com/dotzenith/healer"
autobins = false

[[bin]]
name = "hl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
url = "2.5"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
dirs = "6.0"
arboard = "3.6"
anyhow = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
